--- a/mini.ini
+++ b/mini.ini
@@ -1,34 +1,34 @@
 [custom]
-;²»ÒªËæÒâ¸Ä±ä¹Ø¼ü×Ö£¬·ñÔò»áµ¼ÖÂ³ö´í
-;acl4SSR¹æÔò-ÔÚÏß°æ
+;ä¸è¦éšæ„æ”¹å˜å…³é”®å­—ï¼Œå¦åˆ™ä¼šå¯¼è‡´å‡ºé”™
+;acl4SSRè§„åˆ™-åœ¨çº¿ç‰ˆ
 
-;È¥¹ã¸æ£ºÖ§³Ö
-;×Ô¶¯²âËÙ£ºÖ§³Ö
-;Î¢Èí·ÖÁ÷£º²»Ö§³Ö
-;Æ»¹û·ÖÁ÷£º²»Ö§³Ö
-;ÔöÇ¿ÖĞ¹úIP¶Î£º²»Ö§³Ö
-;ÔöÇ¿¹úÍâGFW£º²»Ö§³Ö
+;å»å¹¿å‘Šï¼šæ”¯æŒ
+;è‡ªåŠ¨æµ‹é€Ÿï¼šæ”¯æŒ
+;å¾®è½¯åˆ†æµï¼šä¸æ”¯æŒ
+;è‹¹æœåˆ†æµï¼šä¸æ”¯æŒ
+;å¢å¼ºä¸­å›½IPæ®µï¼šä¸æ”¯æŒ
+;å¢å¼ºå›½å¤–GFWï¼šä¸æ”¯æŒ
 
-ruleset=”9Á3 È«ÇòÖ±Á¬,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=”9Á3 È«ÇòÖ±Á¬,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=•0“5 È«ÇòÀ¹½Ø,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=•0“5 È«ÇòÀ¹½Ø,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=”9Á3 È«ÇòÖ±Á¬,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=•0‹4 ½ÚµãÑ¡Ôñ,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=•0‹4 ½ÚµãÑ¡Ôñ,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=•0‹4 ½ÚµãÑ¡Ôñ,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
-ruleset=”9Á0 EMBY,https://raw.githubusercontent.com/zanisdifferent/clash/main/emby.yaml?token=AKZQBSINIGN2OWPVQ53EAJLAARFIM
-ruleset=”9Á3 È«ÇòÖ±Á¬,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=”9Á3 È«ÇòÖ±Á¬,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=”9Á3 È«ÇòÖ±Á¬,[]GEOIP,CN
-ruleset=”9Ì5 Â©ÍøÖ®Óã,[]FINAL
+ruleset=ğŸ¯ å…¨çƒç›´è¿,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=ğŸ¯ å…¨çƒç›´è¿,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=ğŸ›‘ å…¨çƒæ‹¦æˆª,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=ğŸ›‘ å…¨çƒæ‹¦æˆª,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=ğŸ¯ å…¨çƒç›´è¿,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=ğŸš€ èŠ‚ç‚¹é€‰æ‹©,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=ğŸš€ èŠ‚ç‚¹é€‰æ‹©,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=ğŸš€ èŠ‚ç‚¹é€‰æ‹©,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
+ruleset=ğŸ¬ EMBY,https://raw.githubusercontent.com/zanisdifferent/clash/main/emby.yaml
+ruleset=ğŸ¯ å…¨çƒç›´è¿,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=ğŸ¯ å…¨çƒç›´è¿,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=ğŸ¯ å…¨çƒç›´è¿,[]GEOIP,CN
+ruleset=ğŸŸ æ¼ç½‘ä¹‹é±¼,[]FINAL
 
-custom_proxy_group=•0‹4 ½ÚµãÑ¡Ôñ`select`[]7®5„1‚5 ×Ô¶¯Ñ¡Ôñ`[]”9ç7 ¹ÊÕÏ×ªÒÆ`[]DIRECT`.*
-custom_proxy_group=7®5„1‚5 ×Ô¶¯Ñ¡Ôñ`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=”9ç7 ¹ÊÕÏ×ªÒÆ`fallback`.*`http://www.gstatic.com/generate_204`180
-custom_proxy_group=”9Á3 È«ÇòÖ±Á¬`select`[]DIRECT`[]•0‹4 ½ÚµãÑ¡Ôñ`[]7®5„1‚5 ×Ô¶¯Ñ¡Ôñ
-custom_proxy_group=•0“5 È«ÇòÀ¹½Ø`select`[]REJECT`[]DIRECT
-custom_proxy_group=”9Ì5 Â©ÍøÖ®Óã`select`[]•0‹4 ½ÚµãÑ¡Ôñ`[]”9Á3 È«ÇòÖ±Á¬`[]7®5„1‚5 ×Ô¶¯Ñ¡Ôñ`[]”9ç7 ¹ÊÕÏ×ªÒÆ`.*
+custom_proxy_group=ğŸš€ èŠ‚ç‚¹é€‰æ‹©`select`[]â™»ï¸ è‡ªåŠ¨é€‰æ‹©`[]ğŸ”¯ æ•…éšœè½¬ç§»`[]DIRECT`.*
+custom_proxy_group=â™»ï¸ è‡ªåŠ¨é€‰æ‹©`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=ğŸ”¯ æ•…éšœè½¬ç§»`fallback`.*`http://www.gstatic.com/generate_204`180
+custom_proxy_group=ğŸ¯ å…¨çƒç›´è¿`select`[]DIRECT`[]ğŸš€ èŠ‚ç‚¹é€‰æ‹©`[]â™»ï¸ è‡ªåŠ¨é€‰æ‹©
+custom_proxy_group=ğŸ›‘ å…¨çƒæ‹¦æˆª`select`[]REJECT`[]DIRECT
+custom_proxy_group=ğŸŸ æ¼ç½‘ä¹‹é±¼`select`[]ğŸš€ èŠ‚ç‚¹é€‰æ‹©`[]ğŸ¯ å…¨çƒç›´è¿`[]â™»ï¸ è‡ªåŠ¨é€‰æ‹©`[]ğŸ”¯ æ•…éšœè½¬ç§»`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
