--- a/mini.ini
+++ b/mini.ini
@@ -29,7 +29,7 @@ custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]🔯 故障转移`.*
-custom_proxy_group=🎬 EMBY
+custom_proxy_group=🎬 EMBY`select`[]♻️ 自动选择`[]🔯 故障转移`[]DIRECT`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
