--- a/mini.ini
+++ b/mini.ini
@@ -9,7 +9,7 @@
 ;增强中国IP段：不支持
 ;增强国外GFW：不支持
 
-ruleset=🎬 EMBY,https://raw.githubusercontent.com/zanisdifferent/clash/main/emby.list
+ruleset=🎬 影音播放,https://raw.githubusercontent.com/zanisdifferent/clash/main/emby.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -23,7 +23,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🎬 EMBY`select`[]♻️ 自动选择`[]🔯 故障转移`[]DIRECT`.*
+custom_proxy_group=🎬 影音播放`select`[]♻️ 自动选择`[]🔯 故障转移`[]DIRECT`.*
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
