--- a/mini.ini
+++ b/mini.ini
@@ -27,11 +27,11 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/zanisdifferent/clash
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`.*
 custom_proxy_group=🎬 影音播放`select`[]DIRECT`.*
-custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`*
 
