--- a/test.ini
+++ b/test.ini
@@ -13,7 +13,7 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/zanisdifferent/clash/main/fakevideo.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/zanisdifferent/clash/main/Video-Crack.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
@@ -26,7 +26,7 @@ custom_proxy_group=🎬 影音播放`select`[]DIRECT`.*
 custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`*
+custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选择`*
 custom_proxy_group=HK`url-test`(香港)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=JPN`url-test`(日本)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=prpr|aia`select`(HKG|TPE|SGP|JPN)
