--- a/test.ini
+++ b/test.ini
@@ -30,4 +30,4 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选
 custom_proxy_group=HK`url-test`(香港)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=JPN`url-test`(日本)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=prpr|aia`select`(HKG|TPE|SGP|JPN)
-custom_proxy_group=iepl`fallback`(IEPL).*(IEPL)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=iepl`select`(Premium|V2)
