--- a/test.ini
+++ b/test.ini
@@ -31,3 +31,6 @@ custom_proxy_group=HK`url-test`(香港)`http://www.gstatic.com/generate_204`300,
 custom_proxy_group=JPN`url-test`(日本)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=prpr|aia`select`(HKG|TPE|SGP|JPN)
 custom_proxy_group=iepl`select`(Premium|V2)
+
+enable_rule_generator=true
+overwrite_original_rules=true
