--- a/mobile.ini
+++ b/mobile.ini
@@ -17,12 +17,11 @@ ruleset=Default,https://raw.githubusercontent.com/zanisdifferent/clash/main/whit
 ruleset=Direct,[]GEOIP,CN
 ruleset=Ultimate,[]FINAL
 	
-	
+custom_proxy_group=Telegram`select`[]Default`[]Manual
+custom_proxy_group=Emby`select`[]DIRECT`[]Manual
+custom_proxy_group=FCM`select`[]DIRECT`[]Default
+custom_proxy_group=Direct`select`[]DIRECT
+custom_proxy_group=Ultimate`select`[]Direct`[]Default
 custom_proxy_group=Default`select`[]Auto
 custom_proxy_group=Manual`select`.*
 custom_proxy_group=Auto`url-test`.*`http://cp.cloudflare.com/generate_204`600
-custom_proxy_group=Telegram`select`[]Default`.*
-custom_proxy_group=Emby`select`[]DIRECT`.*
-custom_proxy_group=FCM`select`[]DIRECT`[]Default
-custom_proxy_group=Direct`select`[]DIRECT
-custom_proxy_group=Ultimate`select`[]Direct`[]Default`*
