--- a/my.ini
+++ b/my.ini
@@ -23,8 +23,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`.*
-custom_proxy_group=🎬 影音播放`select`[]DIRECT`.*
+custom_proxy_group=📲 电报信息`select`[]♻️ 自动选择`[]🚀 手动切换
+custom_proxy_group=🎬 影音播放`select`[]DIRECT`[]🚀 手动切换
 custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
